transferred UI from eel application

--- a/package.json
+++ b/package.json
@@ -8,13 +8,35 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.47"
+    "@jamescoyle/vue-icon": "^0.1.2",
+    "@mdi/js": "^7.2.96",
+    "lodash": "^4.17.21",
+    "pinia": "^2.1.4",
+    "vue": "^3.3.0",
+    "vue-eslint-parser": "^9.3.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.196",
     "@types/node": "^20.4.4",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-vue": "^4.1.0",
+    "autoprefixer": "^10.4.14",
     "electron": "^24.4.0",
     "electron-builder": "^23.6.0",
+    "eslint": "^8.45.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-standard-with-typescript": "^35.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-tailwindcss": "^3.12.1",
+    "eslint-plugin-vue": "^9.14.1",
+    "postcss": "^8.4.24",
+    "prettier": "^2.8.8",
+    "prettier-eslint": "^15.0.1",
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
     "vite-plugin-electron": "^0.11.2",
