--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
       "@/*": ["./src/*"],
       "@components/*": ["./src/components/*"],
       "@utils/*": ["./src/components/utils/*"],
-      "@assets/*": ["./src/assets/*"]
+      "@assets/*": ["./src/assets/*"],
+      "@types/*": ["./src/@types/*"]
     },
     "typeRoots": ["./src/types"],
 
