--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@jamescoyle/vue-icon": "^0.1.2",
     "@mdi/js": "^7.2.96",
+    "csv-parse": "^5.4.0",
     "lodash": "^4.17.21",
     "pinia": "^2.1.4",
     "vue": "^3.3.0",
