--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lodash": "^4.17.21",
     "pinia": "^2.1.4",
     "vue": "^3.3.0",
-    "vue-eslint-parser": "^9.3.1"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.196",
@@ -42,6 +42,7 @@
     "vite": "^4.3.2",
     "vite-plugin-electron": "^0.11.2",
     "vite-plugin-electron-renderer": "^0.14.5",
+    "vue-eslint-parser": "^9.3.1",
     "vue-tsc": "^1.4.2"
   },
   "main": "dist-electron/main.js"
