detect delimiter automatically

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@jamescoyle/vue-icon": "^0.1.2",
     "@mdi/js": "^7.2.96",
     "csv-parse": "^5.4.0",
+    "csv-string": "^4.1.1",
     "lodash": "^4.17.21",
     "pinia": "^2.1.4",
     "vue": "^3.3.0",
